k8s/ingress/nginx/whoami/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-service

spec:
  type: ClusterIP
  selector:
    app: whoami

  ports:
    - name: http
      protocol: TCP
      port: 80
